fix: fix retina on mobile

--- a/src/assets/scss/components/_about.scss
+++ b/src/assets/scss/components/_about.scss
@@ -17,11 +17,13 @@
   background-repeat: no-repeat;
   background-size: 342px 267px, 633px 344px, 480px 661px;
 
-  @include mq(retina) {
-    background-image:
-    url('../images/about/love@2x.png'),
-    url('../images/about/bg@2x.png'),
-    url('../images/about/bg2@2x.png');
+  @include mq(laptop) {
+    @include mq(retina) {
+      background-image:
+        url('../images/about/love@2x.png'),
+        url('../images/about/bg@2x.png'),
+        url('../images/about/bg2@2x.png');
+    }
   }
 
   @include mq(mobile) {
